--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.0.1",
+    "next": "^14.2.16",
     "next-intl": "^3.23.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
