--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/swiper": "^5.4.3",
     "dompurify": "^3.1.7",
     "html-to-text": "^9.0.5",
     "next": "^14.2.16",
     "next-intl": "^3.23.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
