--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-intl": "^3.23.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^9.1.1",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
