--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^5.1.1",
     "@types/swiper": "^5.4.3",
+    "cloudinary": "^2.5.1",
     "dompurify": "^3.1.7",
     "html-to-text": "^9.0.5",
     "next": "^14.2.16",
