--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/swiper": "^5.4.3",
     "cloudinary": "^2.5.1",
     "dompurify": "^3.1.7",
+    "firebase": "^11.0.1",
     "formidable": "^3.5.2",
     "html-to-text": "^9.0.5",
     "next": "^14.2.16",
@@ -21,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^9.1.1",
+    "react-toastify": "^10.0.6",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
