--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-intl": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.62.0",
     "react-pdf": "^9.1.1",
     "react-toastify": "^10.0.6",
     "swiper": "^11.1.14"
