--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.5.2",
     "react-pdf": "^9.1.1",
     "react-toastify": "^10.0.6",
+    "resend": "^6.0.1",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
